# cookiecutter-packaging

./: README.rst  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitattributes  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/data/: README.md
