[metadata]
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.full_name }}
maintainer_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = {{ cookiecutter.open_source_license }}
{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'GPL v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
[options]
python_requires = >= 3.6
install_requires =
packages = find:
include_package_data = False

[options.package_data]
* =
    data/*

[options.extras_require]
doc =
    sphinx
test =
    pytest
    coverage
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = {{cookiecutter.project_slug}}/_version.py
versionfile_build = {{cookiecutter.project_slug}}/_version.py
tag_prefix =
parentdir_prefix = 
